# nifty_pred

./: .gitignore  README.md  in_outsample_test.ipynb  insample.csv  main.py  model_svm.pkl  model_svm_insample.pkl  n_folds.ipynb  outsample.csv  outsample_pred.csv  pca+svr.ipynb  predictions.csv  pyproject.toml  regression+classification.ipynb
Data/: merged_big_1.csv
Strategy/: long_fut.ipynb
